app server, database, sqlite, helper/extension methods improvements and fixes
- ADD: T4 entity generator
- ADD: can define custom working directory for application server now
- ADD: improved Single() helper method with predicate
- ADD: CreateDirectoryDeep() helper/extension method
- FIX: parsing and casting data in IniFileConfigRepository
- FIX: concat string sequences in StringHelper.AsString() method
- FIX: UppercaseWords() helper method
- UPD: code improvements
- ADD: temporary SQLite files can be created now
- ADD: types for database connections and entities
- ADD: data models and layer (based on EF 5)

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,11 @@
 /Projects/MarcelJoachimKloubert.ApplicationServer/MonoTorrent/obj
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.SystemSqlite/obj
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.SystemSqlite/bin
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/config.ini
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataModels/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataModels/bin
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataLayer/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataLayer/bin
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/MarcelJoachimKloubert.ApplicationServer.TestHost.csproj.user
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.AppServerDb/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.AppServerDb/bin
