--- a/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.XNA/MarcelJoachimKloubert.CLRToolbox.XNA.40/MarcelJoachimKloubert.CLRToolbox.XNA.40.csproj
@@ -122,11 +122,45 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\ConverterBase.cs">
       <Link>Data\ConverterBase.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\DatabaseBase.cs">
+      <Link>Data\DatabaseBase.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Entities\EntityBase.cs">
+      <Link>Data\Entities\EntityBase.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Entities\EntityBase.PropertyChanged.cs">
+      <Link>Data\Entities\EntityBase.PropertyChanged.cs</Link>
+      <DependentUpon>EntityBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Entities\EntityBase.PropertyChanging.cs">
+      <Link>Data\Entities\EntityBase.PropertyChanging.cs</Link>
+      <DependentUpon>EntityBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Entities\IEntity.cs">
+      <Link>Data\Entities\IEntity.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Entities\IEntity.PropertyChanged.cs">
+      <Link>Data\Entities\IEntity.PropertyChanged.cs</Link>
+      <DependentUpon>IEntity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\Entities\IEntity.PropertyChanging.cs">
+      <Link>Data\Entities\IEntity.PropertyChanging.cs</Link>
+      <DependentUpon>IEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\GlobalConverter.cs">
       <Link>Data\GlobalConverter.cs</Link>
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\IConverter.cs">
       <Link>Data\IConverter.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\IDatabase.cs">
+      <Link>Data\IDatabase.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\TMColumnAttribute.cs">
+      <Link>Data\TMColumnAttribute.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Data\TMTableAttribute.cs">
+      <Link>Data\TMTableAttribute.cs</Link>
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Diagnostics\Execution\ILogCommand.cs">
       <Link>Diagnostics\Execution\ILogCommand.cs</Link>
@@ -263,6 +297,14 @@
       <Link>Helpers\CollectionHelper.ForAllAsync.Impl.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.Select.cs">
+      <Link>Helpers\CollectionHelper.Select.cs</Link>
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.Single.Predicate.cs">
+      <Link>Helpers\CollectionHelper.Single.Predicate.cs</Link>
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.SingleOrDefault.Predicate.cs">
       <Link>Helpers\CollectionHelper.SingleOrDefault.Predicate.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
@@ -277,6 +319,10 @@
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\IOHelper.CopyTo.cs">
       <Link>Helpers\IOHelper.CopyTo.cs</Link>
+      <DependentUpon>IOHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\IOHelper.CreateDirectoryDeep.cs">
+      <Link>Helpers\IOHelper.CreateDirectoryDeep.cs</Link>
       <DependentUpon>IOHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\IOHelper.cs">
@@ -606,6 +652,24 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.20\_Compatibility\System\Collections\Generic\IReadOnlyDictionary.cs">
       <Link>_Compatibility\System\Collections\Generic\IReadOnlyDictionary.cs</Link>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Data\Entities\EntityBase.GetPropertyName.cs">
+      <Link>Data\Entities\EntityBase.GetPropertyName.cs</Link>
+      <DependentUpon>EntityBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Data\Entities\EntityBase.PropertyChanged.LINQ.cs">
+      <Link>Data\Entities\EntityBase.PropertyChanged.LINQ.cs</Link>
+      <DependentUpon>EntityBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Data\Entities\EntityBase.PropertyChanging.LINQ.cs">
+      <Link>Data\Entities\EntityBase.PropertyChanging.LINQ.cs</Link>
+      <DependentUpon>EntityBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Data\IQueryableDatabase.cs">
+      <Link>Data\IQueryableDatabase.cs</Link>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Data\QueryableDatabaseBase.cs">
+      <Link>Data\QueryableDatabaseBase.cs</Link>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\ClrToolboxExtensionMethods.cs">
       <Link>Extensions\ClrToolboxExtensionMethods.cs</Link>
     </Compile>
@@ -636,6 +700,10 @@
       <Link>Extensions\Collections.Randomize.cs</Link>
       <DependentUpon>Collections.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Collections.Select.cs">
+      <Link>Extensions\Collections.Select.cs</Link>
+      <DependentUpon>Collections.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Collections.Shuffle.cs">
       <Link>Extensions\Collections.Shuffle.cs</Link>
       <DependentUpon>Collections.cs</DependentUpon>
@@ -647,6 +715,13 @@
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\Collections.ToArray.cs">
       <Link>Extensions\Collections.ToArray.cs</Link>
       <DependentUpon>Collections.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\IO.CreateDirectoryDeep.cs">
+      <Link>Extensions\IO.CreateDirectoryDeep.cs</Link>
+      <DependentUpon>IO.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\IO.cs">
+      <Link>Extensions\IO.cs</Link>
     </Compile>
     <Compile Include="..\..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\LinqExpressions.cs">
       <Link>Extensions\LinqExpressions.cs</Link>
