generators, extension methods, cleanups, and fixes
- ADD: generator that creates enums from the data of a table of a
database
- ADD: GetMethodInfo() extension method
- CHG: code improvmenets
- CHG: improved entity generator
- FIX: typos
- FIX: other minor fixes

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,7 @@
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/MarcelJoachimKloubert.ApplicationServer.TestHost.csproj.user
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.AppServerDb/obj
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Services.AppServerDb/bin
+
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataModels/Enums/AppServer.xml
+
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataModels/MarcelJoachimKloubert.ApplicationServer.DataModels.csproj.user
