--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/config.sample.ini
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/config.sample.ini
@@ -3,4 +3,4 @@
 ;   - ado_oledb
 ;   - ado_oracle
 provider=ado_mssql
-connection_string=Server=localhost;Database=ApplicationServer;User Id=sa;Password=deutsche_polizisten_gaertner_und_floristen;
+connection_string=Server\=localhost\;Database\=ApplicationServer\;User Id\=sa\;Password\=deutsche_polizisten_gaertner_und_floristen\;
